--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,11 @@ ul{
 
 ul a{
     display: inline-block;
-    padding: 2px;
+    padding: 10px;
+    margin: 5px;
     text-decoration: none;
+    width:80%;
+    background-color: aliceblue;
 }
 
 body{
