--- a/styles/main.css
+++ b/styles/main.css
@@ -18,3 +18,12 @@ body{
 h1{
     color: #000066;
 }
+
+#whatILearned {
+    list-style-type: square;
+    width: 80%;
+    padding: 10px;
+    margin: 5px;
+    background-color: #ccff33;
+    color: #663300;
+}
