--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,7 @@ h1{
     width: 80%;
     padding: 10px;
     margin: 5px;
-    background-color: #ccff33;
+    background-color: #33e0ff;
+    border-radius: 10px;
     color: #663300;
 }
