--- a/ToDoProject/todo.css
+++ b/ToDoProject/todo.css
@@ -2,7 +2,7 @@
 
 .headline {
     text-align: center;
-    background-color: #f44336;
+    background-color: #8AC007;
     color: white;
     height: 100px;
     width: 100%;
@@ -10,28 +10,35 @@
 }
 
 .todoList {
-    border:5px solid black;
-    width: 95%;
+    border:5px solid #8AC007;
+    width: 100%;
     
 
 }
 
-.todoCheckList, .todoFooterItem {
+.todoCheckList {
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    
 }
 
+
 .todoCheckItem {
-    border: 3px solid black;    
+    border: 3px solid black; 
+    height: 30px; 
+
 }
 
 .todoFooterItem {
     list-style-type: none;
-    float: left;
+    display: inline-block;
+    padding: 8px;
     
 }
-.todoFooterItem a {
-    display: block;
-    padding: 8px;
+.todoFooterItem active {
+    background-color: rgb(112, 192, 7);
+
 
 }
 
@@ -41,4 +48,24 @@
     padding: 0;
     overflow: hidden;
     background-color: #dddddd;
+}
+
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 35px;
+    bottom: 10px;
+    border: 3px solid #8AC007;
+}
+
+.footer input {
+    width: 300px;
+    height: 30px;
+}
+
+.addBtn {
+    width: 100px;
+    height: 25px;
+    background-color: #8AC007;
+    color: #ffffff;
 }
