--- a/RecipeApp/recipe.css
+++ b/RecipeApp/recipe.css
@@ -15,7 +15,7 @@
 .topnav button {
     background-color: #c4a287;
     border: solid 1px #b07156;
-    color: white;
+    color: #3b2731;
     padding: 10px;
     text-align: center;
     text-decoration: none;
@@ -62,29 +62,6 @@ h2 {
     text-align: center;
 }
 
-#userIngredient {
-    width: 75%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    font-size: 2em;
-    border-radius: 12px;
-}
-
-#ingredientSubmit {
-    background-color: #ab4e68;
-    border: solid 1px #533745;
-    color: white;
-    padding: 17px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-}
-
 #picture {
     display: block;
     width: 75%;
@@ -94,4 +71,5 @@ h2 {
 
 footer {
     padding: 20px;
+    color: #3b2731;
 }
